added section messenger-action

--- a/index.html
+++ b/index.html
@@ -492,6 +492,34 @@
 				</a>
 			</section>
 		</section>
+
+
+		<section class="messenger-action container hidden-tablet" aria-labelledby="messenger-action-title">
+			<h2 class="visually-hidden">Быстрая запись в Telegram-боте</h2>
+
+			<div class="messenger-action__wrapper">
+				<div class="messenger-action__image-wrapper">
+					<img class="messenger-action__image" src="./images/messenger-action/moblile-robot.webp"
+						srcset="./images/messenger-action/moblile-robot.webp@2x.webp 2x" alt="Робот с мобильным телефоном"
+						width="350" height="350" loading="lazy">
+				</div>
+
+				<div class="messenger-action__body">
+					<h3 class="messenger-action__title h3" id="messenger-action-title">
+						Быстрая запись, перенос и&nbsp;отмена в&nbsp;удобном Telegram-боте!
+					</h3>
+
+					<div class="messenger-action__subtitle">
+						Запись за&nbsp;30&nbsp;секунд, вся информация под рукой: дата, время, адрес.<br>Можно легко отменить или
+						перенести.
+					</div>
+
+					<a class="messenger-action__button button" href="#!" target="_blank">
+						Записаться через бота
+					</a>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer class="footer">
@@ -635,6 +663,7 @@
 					</ul>
 				</nav>
 			</section>
+
 		</div>
 	</footer>
 
