added section special-offers

--- a/index.html
+++ b/index.html
@@ -520,6 +520,74 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="special-offers section container" aria-labelledby="special-offers-title">
+			<h2 class="section__title h3" id="special-offers-title">
+				Специальные предложения
+			</h2>
+
+			<ul class="special-offers__list">
+				<li>
+					<article class="special-offer">
+						<picture class="special-offer__image-wrapper">
+							<source srcset="./images/special-offers/offer-image-1-mobile.webp" media="(max-width: 767px)"
+								type="image/webp">
+							<source srcset="./images/special-offers/offer-image-1.webp" type="image/webp">
+							<img class="special-offer__image" src="./images/special-offers/offer-image-1-mobile.webp"
+								alt="Карта Bonus 2ATM" width="340" height="220" loading="lazy">
+						</picture>
+
+						<div class="special-offer__body">
+							<h3 class="special-offer__heading h5">
+								Ваша скидка растет с&nbsp;каждым визитом!
+							</h3>
+
+							<div class="special-offer__text">
+								<p>
+									Заполните анкету и&nbsp;получите постоянную скидку уже сегодня! Чем больше вы&nbsp;пользуетесь нашими
+									услугами, тем выше ваша выгода. Присоединяйтесь к&nbsp;программе лояльности и&nbsp;экономьте
+									с&nbsp;каждым визитом!
+								</p>
+							</div>
+
+							<a class="special-offer__button button button--accent-bg" href="#!">
+								Узнать подробнее
+							</a>
+						</div>
+					</article>
+				</li>
+
+				<li>
+					<article class="special-offer">
+						<picture class="special-offer__image-wrapper">
+							<source srcset="./images/special-offers/offer-image-2-mobile.webp" media="(max-width: 767px)"
+								type="image/webp">
+							<source srcset="./images/special-offers/offer-image-2.webp" type="image/webp">
+							<img class="special-offer__image" src="./images/special-offers/offer-image-2-mobile.webp"
+								alt="Карта Bonus 2ATM" width="340" height="220" loading="lazy">
+						</picture>
+
+						<div class="special-offer__body">
+							<h3 class="special-offer__heading h5">
+								Выгодные условия для корпоративных клиентов
+							</h3>
+
+							<div class="special-offer__text">
+								<p>
+									Мы&nbsp;предлагаем услуги для корпоративных клиентов. В&nbsp;любой из&nbsp;наших мастерских&nbsp;Вы
+									можете заключить договор на&nbsp;безналичное обслуживание автомобиля. Возможны различные условия
+									в&nbsp;зависимости от&nbsp;размера автопарка.
+								</p>
+							</div>
+
+							<a class="special-offer__button button button--accent-bg" href="#!">
+								Узнать подробнее
+							</a>
+						</div>
+					</article>
+				</li>
+			</ul>
+		</section>
 	</main>
 
 	<footer class="footer">
