--- a/index.html
+++ b/index.html
@@ -588,6 +588,46 @@
 				</li>
 			</ul>
 		</section>
+
+		<section class="our-clients section container" aria-labelledby="our-clients-title">
+			<h2 class="our-clients__title section__title h3" id="our-clients-title">
+				Наши клиенты
+			</h2>
+
+			<div class="our-clients__slider">
+				<div class="swiper-wrapper">
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="AN-SECURITY DIRECT">
+						<img class="our-clients__image" src="./images/our-clients/our-client-1.webp" width="190" height="115"
+							alt="an-secuity direct" loading="lazy">
+					</a>
+
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="STÄUBLI">
+						<img class="our-clients__image" src="./images/our-clients/our-client-2.webp" width="190" height="115"
+							alt="StÄubli" loading="lazy">
+					</a>
+
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="StarLine">
+						<img class="our-clients__image" src="./images/our-clients/our-client-3.webp" width="190" height="115"
+							alt="Starline" loading="lazy">
+					</a>
+
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="UniRent">
+						<img class="our-clients__image" src="./images/our-clients/our-client-4.webp" width="190" height="115"
+							alt="Unirent" loading="lazy">
+					</a>
+
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="ТИТАН">
+						<img class="our-clients__image" src="./images/our-clients/our-client-5.webp" width="190" height="115"
+							alt="Титан" loading="lazy">
+					</a>
+
+					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="АТОМПРОЕКТ">
+						<img class="our-clients__image" src="./images/our-clients/our-client-6.webp" width="190" height="115"
+							alt="Атомпроект" loading="lazy">
+					</a>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer class="footer">
@@ -735,7 +775,18 @@
 		</div>
 	</footer>
 
-	<!-- <script src="./libs/swiper/swiper-bundle.min.js"></script> -->
+	<script src="./libs/swiper/swiper-bundle.min.js"></script>
+	<script>
+		const swiper = new Swiper(".our-clients__slider", {
+			loop: true,
+			slidesPerView: "auto",
+			spaceBetween: 24,
+			autoplay: {
+				delay: 2500,
+				disableOnInteraction: false,
+			},
+		});
+	</script>
 	<!-- <script type="module" src="./js/develop/index.js"></script> -->
 
 </body>
