edits in the sections our-clients and certificates

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 		</section>
 
 		<section class="certificates section container" aria-labelledby="certificates-title">
-			<h2 class="our-clients__title section__title h3" id="certificates-title">
+			<h2 class="certificates__title section__title h3" id="certificates-title">
 				Сертификаты наших мастеров
 			</h2>
 
